--- a/index.html
+++ b/index.html
@@ -1959,64 +1959,64 @@
             gap: 1.5rem;
         }
 
-        /* Glowing Mini Service Cards */
+        /* Glowing Card Effect - Blue Scheme */
         .mini-service {
             position: relative;
             border-radius: 16px;
             padding: 2rem;
-            transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-            z-index: 1;
-            overflow: visible;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            transition: all 0.5s ease;
         }
 
         .mini-service::before {
             content: '';
             position: absolute;
-            inset: 0;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: linear-gradient(315deg, #00E1E6, #0051E6);
             border-radius: 16px;
-            z-index: -2;
-            opacity: 0.6;
-            transition: all 0.4s ease;
         }
 
         .mini-service::after {
             content: '';
             position: absolute;
-            inset: 0;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: linear-gradient(315deg, #00E1E6, #0051E6);
             border-radius: 16px;
-            filter: blur(20px);
-            opacity: 0;
-            z-index: -3;
-            transition: all 0.4s ease;
+            filter: blur(30px);
+            opacity: 0.5;
+            transition: all 0.5s ease;
         }
 
-        /* Dark inner background */
-        .mini-service > * {
-            position: relative;
+        .mini-service b {
+            position: absolute;
+            inset: 4px;
+            background: rgba(10, 10, 20, 0.85);
+            border-radius: 14px;
             z-index: 2;
         }
 
-        .mini-service-bg {
-            position: absolute;
-            inset: 2px;
-            background: rgba(10, 10, 15, 0.92);
-            border-radius: 14px;
-            z-index: 1;
+        .mini-service h4,
+        .mini-service p,
+        .mini-service .price {
+            position: relative;
+            z-index: 3;
         }
 
         .mini-service:hover {
             transform: translateY(-8px);
         }
 
-        .mini-service:hover::before {
-            opacity: 1;
-        }
-
         .mini-service:hover::after {
-            opacity: 0.5;
-            filter: blur(30px);
+            filter: blur(40px);
+            opacity: 0.8;
         }
 
         .mini-service .price {
@@ -8275,20 +8275,11 @@
         }
     });
 
-    // Add inner background to glowing cards
+    // Add <b> inner background to glowing cards (required for the effect)
     document.querySelectorAll('.mini-service, .service-card').forEach(function(card) {
-        if (!card.querySelector('.card-inner-bg')) {
-            const inner = document.createElement('div');
-            inner.className = 'card-inner-bg';
-            inner.style.cssText = 'position:absolute;inset:2px;background:rgba(10,10,15,0.92);border-radius:14px;z-index:0;';
+        if (!card.querySelector('b')) {
+            const inner = document.createElement('b');
             card.insertBefore(inner, card.firstChild);
-            // Make sure content is above the background
-            Array.from(card.children).forEach(function(child) {
-                if (!child.classList.contains('card-inner-bg')) {
-                    child.style.position = 'relative';
-                    child.style.zIndex = '2';
-                }
-            });
         }
     });
 
