Switch all fonts to Lato across entire site

--- a/old_index.html
+++ b/old_index.html
@@ -22,7 +22,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
 
     <!-- Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
@@ -180,7 +180,7 @@
             <div class="container">
                 <div class="row align-items-center text-center text-md-start">
                     <div class="col-md-8">
-                        <h4 class="mb-1" style="font-family: 'Space Grotesk', sans-serif;"><i class="fas fa-robot me-2" style="color: #C4654A;"></i>Free Lesson: What Are AI Agents?</h4>
+                        <h4 class="mb-1" style="font-family: 'Lato', sans-serif;"><i class="fas fa-robot me-2" style="color: #C4654A;"></i>Free Lesson: What Are AI Agents?</h4>
                         <p class="mb-0" style="color: rgba(45, 42, 38, 0.7);">Learn how AI Agents can automate your work &mdash; explained simply with interactive 3D visualization. No coding required.</p>
                     </div>
                     <div class="col-md-4 text-md-end mt-3 mt-md-0">
