--- a/ri-docs.html
+++ b/ri-docs.html
@@ -7,7 +7,7 @@
     <style>
         :root { --primary: #0051E6; --secondary: #00E1E6; --accent: #10b981; --dark: #0f172a; --darker: #020617; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'DM Sans', system-ui, sans-serif; background: linear-gradient(135deg, var(--dark) 0%, #1e293b 100%); color: #e2e8f0; line-height: 1.8; min-height: 100vh; }
+        body { font-family: 'Lato', system-ui, sans-serif; background: linear-gradient(135deg, var(--dark) 0%, #1e293b 100%); color: #e2e8f0; line-height: 1.8; min-height: 100vh; }
         .container { max-width: 900px; margin: 0 auto; padding: 2rem; }
         
         h1 { font-size: 2.5rem; font-weight: 800; background: linear-gradient(135deg, #0051E6, #00E1E6, #10b981); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 0.5rem; }
