--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -66,7 +66,7 @@
         }
 
         body {
-            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             background: var(--bg-dark);
             color: var(--text);
             overflow-x: hidden;
@@ -77,7 +77,7 @@
         }
 
         h1, h2, h3, h4, h5, h6, .heading-font {
-            font-family: 'Space Grotesk', -apple-system, sans-serif;
+            font-family: 'Lato', -apple-system, sans-serif;
         }
 
         /* Loading screen removed */
@@ -3210,7 +3210,7 @@
             bottom: 30px;
             right: 30px;
             z-index: 9999;
-            font-family: 'Inter', sans-serif;
+            font-family: 'Lato', sans-serif;
         }
 
         .chatbot-toggle {
