--- a/ri-report.html
+++ b/ri-report.html
@@ -24,7 +24,7 @@
  <style>
  :root { --primary: #0051E6; --primary-light: #4C82E6; --text: #e2e8f0; --text-muted: #94a3b8; --success: #10b981; --dark: #0f172a; --card-bg: rgba(255,255,255,0.05); }
  * { margin: 0; padding: 0; box-sizing: border-box; }
- body { font-family: 'DM Sans', system-ui, sans-serif; background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: #e2e8f0; line-height: 1.6; min-height: 100vh; }
+ body { font-family: 'Lato', system-ui, sans-serif; background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: #e2e8f0; line-height: 1.6; min-height: 100vh; }
  .container { max-width: 1400px; margin: 0 auto; padding: 2rem; }
  
  .hero { text-align: center; padding: 2rem; background: rgba(99,102,241,0.1); border-radius: 16px; margin-bottom: 1.5rem; border: 1px solid rgba(99,102,241,0.2); }
