--- a/ri-results.html
+++ b/ri-results.html
@@ -7,7 +7,7 @@
     <style>
         :root { --primary: #0051E6; --secondary: #00E1E6; --accent: #10b981; --dark: #0f172a; --darker: #020617; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'DM Sans', system-ui, sans-serif; background: linear-gradient(180deg, var(--dark) 0%, #1e293b 50%, var(--dark) 100%); color: #e2e8f0; line-height: 1.6; min-height: 100vh; }
+        body { font-family: 'Lato', system-ui, sans-serif; background: linear-gradient(180deg, var(--dark) 0%, #1e293b 50%, var(--dark) 100%); color: #e2e8f0; line-height: 1.6; min-height: 100vh; }
         .container { max-width: 1400px; margin: 0 auto; padding: 2rem; }
         
         /* Stats Cards - matching main page style */
