--- a/ri-tax-sales.html
+++ b/ri-tax-sales.html
@@ -8,7 +8,7 @@
     <style>
         :root { --primary: #ef4444; --secondary: #f59e0b; --accent: #10b981; --dark: #0f172a; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'DM Sans', system-ui, sans-serif; background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: #e2e8f0; line-height: 1.6; min-height: 100vh; }
+        body { font-family: 'Lato', system-ui, sans-serif; background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); color: #e2e8f0; line-height: 1.6; min-height: 100vh; }
         .container { max-width: 1400px; margin: 0 auto; padding: 2rem; }
         
         .home-btn { position: fixed; top: 1rem; left: 1rem; z-index: 100; display: inline-flex; align-items: center; gap: 0.5rem; background: rgba(239,68,68,0.9); color: white; padding: 0.6rem 1.2rem; border-radius: 8px; text-decoration: none; font-weight: 600; font-size: 0.9rem; box-shadow: 0 4px 12px rgba(0,0,0,0.3); transition: all 0.2s; }
