--- a/sell-your-home.html
+++ b/sell-your-home.html
@@ -7,11 +7,11 @@
     <meta name="description" content="List your Rhode Island home for sale by owner. $49 flat fee, no 6% agent commission. Save thousands selling your home yourself.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body {
-            font-family: 'DM Sans', system-ui, sans-serif;
+            font-family: 'Lato', system-ui, sans-serif;
             background: linear-gradient(135deg, #0f172a 0%, #1e1b4b 50%, #0f172a 100%);
             color: #e2e8f0;
             min-height: 100vh;
