--- a/service-ai.html
+++ b/service-ai.html
@@ -11,7 +11,7 @@
     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@400;500;600;700;800&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -238,7 +238,7 @@
                         <span style="display: inline-block; background: rgba(196, 101, 74, 0.1); color: #C4654A; padding: 0.375rem 1rem; border-radius: 100px; font-size: 0.875rem; font-weight: 600; margin-bottom: 1rem;">
                             <i class="fas fa-gift me-1"></i> Free Resource
                         </span>
-                        <h3 style="font-family: 'Space Grotesk', sans-serif; margin-bottom: 0.5rem;">Want to Understand AI Agents First?</h3>
+                        <h3 style="font-family: 'Lato', sans-serif; margin-bottom: 0.5rem;">Want to Understand AI Agents First?</h3>
                         <p style="color: rgba(45, 42, 38, 0.7); margin-bottom: 0; font-size: 1.0625rem;">Take our free interactive lesson. Learn what AI Agents are, how they work, and what they can do for your business &mdash; all explained simply with a stunning 3D visualization.</p>
                     </div>
                     <div class="col-lg-4 text-lg-end">
