Unify fonts to Lato across all pages, fix Google Fonts URL

--- a/sell-your-home.html
+++ b/sell-your-home.html
@@ -7,7 +7,7 @@
     <meta name="description" content="List your Rhode Island home for sale by owner. $49 flat fee, no 6% agent commission. Save thousands selling your home yourself.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body {
