--- a/public/draftbridge/taskpane/taskpane.html
+++ b/public/draftbridge/taskpane/taskpane.html
@@ -6,7 +6,7 @@
     <title>DraftBridge</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="taskpane.css?v=20260130">
 </head>
 <body>
