--- a/index.html
+++ b/index.html
@@ -4337,8 +4337,8 @@
                             <span style="background: linear-gradient(135deg, var(--primary), var(--accent)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 600;">Legal Data</span>
                         </div>
                         <h3 style="font-size: 1.25rem; font-weight: 700; margin-bottom: 0.75rem; line-height: 1.4;">Average Car Accident Settlement in Massachusetts 2026</h3>
-                        <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 1.5rem; flex: 1;">What 118 real Massachusetts car accident settlements reveal about case values. See median settlements, ranges by injury type, and factors that increase your case value.</p>
-                        <a href="blog-ma-car-accident-settlements-2026" class="btn btn-secondary" style="width: fit-content;">
+                        <p style="color: var(--text-muted); font-size: 0.95rem; line-height: 1.6;">What 118 real Massachusetts car accident settlements reveal about case values. See median settlements, ranges by injury type, and factors that increase your case value.</p>
+                        <a href="blog-ma-car-accident-settlements-2026" class="btn btn-secondary" style="width: fit-content; margin-top: auto;">
                             Read More <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -4355,8 +4355,8 @@
                             <span style="background: linear-gradient(135deg, var(--primary), var(--accent)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 600;">Legal Data</span>
                         </div>
                         <h3 style="font-size: 1.25rem; font-weight: 700; margin-bottom: 0.75rem; line-height: 1.4;">Average Car Accident Settlement in Connecticut 2026</h3>
-                        <p style="color: var(--text-muted); font-size: 0.95rem; margin-bottom: 1.5rem; flex: 1;">Data from 136 real Connecticut car accident settlements reveals what your case may be worth. See median values, ranges by injury type, and CT-specific factors.</p>
-                        <a href="blog-ct-car-accident-settlements-2026" class="btn btn-secondary" style="width: fit-content;">
+                        <p style="color: var(--text-muted); font-size: 0.95rem; line-height: 1.6;">Data from 136 real Connecticut car accident settlements reveals what your case may be worth. See median values, ranges by injury type, and CT-specific factors.</p>
+                        <a href="blog-ct-car-accident-settlements-2026" class="btn btn-secondary" style="width: fit-content; margin-top: auto;">
                             Read More <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
