Unify card colors to blue scheme, add 3D tilt effect on hover

--- a/index.html
+++ b/index.html
@@ -4351,13 +4351,15 @@
                 position: relative;
                 overflow: hidden;
                 cursor: pointer;
-                transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
+                transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
                             box-shadow 0.3s ease,
                             z-index 0s 0.4s;
                 scroll-snap-align: start;
                 text-decoration: none;
                 display: flex;
                 flex-direction: column;
+                transform-style: preserve-3d;
+                perspective: 1000px;
             }
             .scroll-card::before {
                 content: '';
@@ -4366,15 +4368,16 @@
                 top: 0;
                 bottom: 0;
                 width: 4px;
-                background: var(--card-accent, linear-gradient(180deg, #0051E6, #00E1E6));
+                background: linear-gradient(180deg, #0051E6, #00E1E6);
                 border-radius: 16px 0 0 16px;
                 transition: width 0.3s ease;
             }
             .scroll-card:hover {
-                transform: translateY(-20px) scale(1.05);
-                box-shadow: 0 25px 50px rgba(0, 81, 230, 0.3);
+                transform: translateY(-20px) scale(1.05) rotate3d(0, 1, 0, -5deg);
+                box-shadow: 0 25px 50px rgba(0, 81, 230, 0.3), 
+                            10px 10px 30px rgba(0, 225, 230, 0.15);
                 z-index: 10;
-                transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
+                transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), 
                             box-shadow 0.3s ease,
                             z-index 0s 0s;
             }
@@ -4403,7 +4406,7 @@
                 font-weight: 700;
                 text-transform: uppercase;
                 letter-spacing: 0.5px;
-                color: var(--card-tag-color, var(--accent));
+                color: var(--accent);
                 margin-top: auto;
             }
             .scroll-header {
@@ -4459,77 +4462,77 @@
                 </div>
 
                 <!-- Card 1 - MA Settlements -->
-                <a href="blog-ma-car-accident-settlements-2026" class="scroll-card" style="--card-accent: linear-gradient(180deg, #ef4444, #f59e0b); --card-tag-color: #f59e0b;">
+                <a href="blog-ma-car-accident-settlements-2026" class="scroll-card">
                     <div class="card-type"><span>Article</span> on Feb 7, 2026</div>
                     <h3>Average Car Accident Settlement in Massachusetts 2026</h3>
                     <div class="card-tag">Legal Data</div>
                 </a>
 
                 <!-- Card 2 - CT Settlements -->
-                <a href="blog-ct-car-accident-settlements-2026" class="scroll-card" style="--card-accent: linear-gradient(180deg, #f59e0b, #ef4444); --card-tag-color: #ef4444;">
+                <a href="blog-ct-car-accident-settlements-2026" class="scroll-card">
                     <div class="card-type"><span>Article</span> on Feb 7, 2026</div>
                     <h3>Average Car Accident Settlement in Connecticut 2026</h3>
                     <div class="card-tag">Legal Data</div>
                 </a>
 
                 <!-- Card 3 - AI Consciousness -->
-                <a href="blog-ai-agents-consciousness-moltbook" class="scroll-card" style="--card-accent: linear-gradient(180deg, #8b5cf6, #ec4899); --card-tag-color: #8b5cf6;">
+                <a href="blog-ai-agents-consciousness-moltbook" class="scroll-card">
                     <div class="card-type"><span>Article</span> on Feb 2, 2026</div>
                     <h3>AI Agents & Consciousness: What the Moltbook Reveals</h3>
                     <div class="card-tag">AI Research</div>
                 </a>
 
                 <!-- Card 4 - Word Add-ins -->
-                <a href="blog-word-addins-lawyers" class="scroll-card" style="--card-accent: linear-gradient(180deg, #0051E6, #00E1E6); --card-tag-color: #00E1E6;">
+                <a href="blog-word-addins-lawyers" class="scroll-card">
                     <div class="card-type"><span>Guide</span> on Jan 28, 2026</div>
                     <h3>Word Add-ins for Lawyers: The Complete 2026 Guide</h3>
                     <div class="card-tag">Legal Tech</div>
                 </a>
 
                 <!-- Card 5 - Document Automation -->
-                <a href="blog-legal-document-automation-2025" class="scroll-card" style="--card-accent: linear-gradient(180deg, #10b981, #06b6d4); --card-tag-color: #10b981;">
+                <a href="blog-legal-document-automation-2025" class="scroll-card">
                     <div class="card-type"><span>Guide</span> on Jan 15, 2026</div>
                     <h3>Legal Document Automation: 2025 Best Practices</h3>
                     <div class="card-tag">Automation</div>
                 </a>
 
                 <!-- Card 6 - Small Business AI -->
-                <a href="blog-small-business-ai-guide" class="scroll-card" style="--card-accent: linear-gradient(180deg, #0051E6, #4C82E6); --card-tag-color: #4C82E6;">
+                <a href="blog-small-business-ai-guide" class="scroll-card">
                     <div class="card-type"><span>Guide</span> on Jan 10, 2026</div>
                     <h3>AI for Small Business: A Practical Implementation Guide</h3>
                     <div class="card-tag">AI Strategy</div>
                 </a>
 
                 <!-- Card 7 - OneDrive Troubleshooting -->
-                <a href="blog-disk-space-onedrive-troubleshooting" class="scroll-card" style="--card-accent: linear-gradient(180deg, #6366f1, #8b5cf6); --card-tag-color: #6366f1;">
+                <a href="blog-disk-space-onedrive-troubleshooting" class="scroll-card">
                     <div class="card-type"><span>Tutorial</span> on Jan 5, 2026</div>
                     <h3>OneDrive Disk Space Issues: The Complete Fix</h3>
                     <div class="card-tag">IT Support</div>
                 </a>
 
                 <!-- Card 8 - IT Support RI -->
-                <a href="blog-it-support-rhode-island" class="scroll-card" style="--card-accent: linear-gradient(180deg, #0051E6, #00E1E6); --card-tag-color: #00E1E6;">
+                <a href="blog-it-support-rhode-island" class="scroll-card">
                     <div class="card-type"><span>Article</span> on Dec 20, 2025</div>
                     <h3>IT Support in Rhode Island: What Businesses Need in 2026</h3>
                     <div class="card-tag">Local</div>
                 </a>
 
                 <!-- Card 9 - StaffSync -->
-                <a href="blog-staffsync-free-restaurant-scheduler" class="scroll-card" style="--card-accent: linear-gradient(180deg, #f59e0b, #eab308); --card-tag-color: #f59e0b;">
+                <a href="blog-staffsync-free-restaurant-scheduler" class="scroll-card">
                     <div class="card-type"><span>Product</span> on Dec 15, 2025</div>
                     <h3>StaffSync: Free Restaurant Staff Scheduling</h3>
                     <div class="card-tag">Tools</div>
                 </a>
 
                 <!-- Card 10 - Shift Trading -->
-                <a href="blog-shift-trading-restaurant-staff" class="scroll-card" style="--card-accent: linear-gradient(180deg, #ec4899, #f43f5e); --card-tag-color: #ec4899;">
+                <a href="blog-shift-trading-restaurant-staff" class="scroll-card">
                     <div class="card-type"><span>Article</span> on Dec 10, 2025</div>
                     <h3>Shift Trading for Restaurant Staff: Best Practices</h3>
                     <div class="card-tag">Operations</div>
                 </a>
 
                 <!-- Card 11 - Sanctus Partnership -->
-                <a href="blog-sanctus-partnership-catholic-couples-app" class="scroll-card" style="--card-accent: linear-gradient(180deg, #14b8a6, #06b6d4); --card-tag-color: #14b8a6;">
+                <a href="blog-sanctus-partnership-catholic-couples-app" class="scroll-card">
                     <div class="card-type"><span>News</span> on Dec 1, 2025</div>
                     <h3>Sanctus Partnership: Building the Catholic Couples App</h3>
                     <div class="card-tag">Partnership</div>
