Remove cyan color from tool review taglines and price badges

--- a/blog-word-addins-lawyers.html
+++ b/blog-word-addins-lawyers.html
@@ -55,9 +55,9 @@
         .highlight-box p { margin: 0; }
         .tool-review { background: var(--bg-card); border: 1px solid var(--border); border-radius: 12px; padding: 2rem; margin: 2rem 0; }
         .tool-review h3 { color: var(--text); margin: 0 0 0.5rem 0; font-size: 1.5rem; }
-        .tool-review .tagline { color: var(--accent); font-size: 0.9rem; margin-bottom: 1rem; }
+        .tool-review .tagline { color: var(--text-muted); font-size: 0.9rem; margin-bottom: 1rem; }
         .tool-review .rating { color: var(--warning); margin-bottom: 1rem; }
-        .tool-review .price { background: rgba(34, 211, 238, 0.1); color: var(--accent); padding: 0.25rem 0.75rem; border-radius: 4px; font-size: 0.85rem; display: inline-block; margin-bottom: 1rem; }
+        .tool-review .price { background: rgba(255, 255, 255, 0.05); color: var(--text); padding: 0.25rem 0.75rem; border-radius: 4px; font-size: 0.85rem; display: inline-block; margin-bottom: 1rem; border: 1px solid rgba(255, 255, 255, 0.1); }
         .pros-cons { display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-top: 1rem; }
         .pros h4 { color: #10b981; margin-bottom: 0.5rem; }
         .cons h4 { color: #ef4444; margin-bottom: 0.5rem; }
