--- a/index.html
+++ b/index.html
@@ -1527,6 +1527,8 @@
             padding: 32px;
             position: relative;
             transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+            display: flex;
+            flex-direction: column;
         }
 
         .featured-product:hover {
@@ -1620,6 +1622,7 @@
             align-items: center;
             padding-top: 16px;
             border-top: 1px solid var(--border);
+            margin-top: auto;
         }
 
         .product-price-tag {
