--- a/index.html
+++ b/index.html
@@ -588,16 +588,17 @@
 
         /* Hero Section */
         .hero {
-            min-height: auto;
-            padding: 120px 0 40px 0;
+            min-height: 85vh;
+            padding: 0;
             position: relative;
             display: flex;
-            align-items: center;
-            justify-content: center;
+            align-items: flex-end;
+            justify-content: flex-start;
             overflow: hidden;
+            background: url('newport-bridge.png') center top / cover no-repeat;
         }
 
-        /* Animated nebula gradient mesh — CSS-only replacement for video */
+        /* Gradient overlay for text readability */
         .hero::before {
             content: '';
             position: absolute;
@@ -605,18 +606,18 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background:
-                radial-gradient(ellipse 80% 60% at 20% 40%, rgba(0, 81, 230, 0.18), transparent 60%),
-                radial-gradient(ellipse 60% 80% at 75% 25%, rgba(34, 211, 238, 0.12), transparent 55%),
-                radial-gradient(ellipse 50% 50% at 50% 80%, rgba(76, 130, 230, 0.1), transparent 50%),
-                radial-gradient(ellipse 90% 40% at 60% 10%, rgba(0, 81, 230, 0.06), transparent 70%);
-            background-size: 200% 200%, 180% 180%, 160% 160%, 220% 220%;
-            animation: gradientShiftHero 18s ease infinite;
+            background: linear-gradient(
+                to top,
+                rgba(10, 10, 15, 0.95) 0%,
+                rgba(10, 10, 15, 0.7) 30%,
+                rgba(10, 10, 15, 0.2) 60%,
+                transparent 100%
+            );
             pointer-events: none;
             z-index: 1;
         }
 
-        /* Vignette + bottom fade into dark */
+        /* Subtle side vignette */
         .hero::after {
             content: '';
             position: absolute;
@@ -624,9 +625,12 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background:
-                radial-gradient(ellipse 120% 80% at 50% 45%, transparent 30%, rgba(10, 10, 15, 0.55) 100%),
-                linear-gradient(to bottom, transparent 60%, var(--bg-dark) 100%);
+            background: linear-gradient(
+                to right,
+                rgba(10, 10, 15, 0.4) 0%,
+                transparent 50%,
+                transparent 100%
+            );
             pointer-events: none;
             z-index: 2;
         }
@@ -781,9 +785,10 @@
         .hero-content {
             position: relative;
             z-index: 10;
-            text-align: center;
-            max-width: 900px;
-            padding: 2rem;
+            text-align: left;
+            max-width: 700px;
+            padding: 3rem 4rem;
+            margin-bottom: 2rem;
             opacity: 0;
             animation: heroEntrance 1.2s cubic-bezier(0.16, 1, 0.3, 1) forwards;
             animation-delay: 0.3s;
@@ -1054,7 +1059,7 @@
         .hero-buttons {
             display: flex;
             gap: 1rem;
-            justify-content: center;
+            justify-content: flex-start;
             flex-wrap: wrap;
             opacity: 0;
             animation: fadeSlideUp 0.8s ease forwards;
@@ -3784,15 +3789,6 @@
     <!-- Hero Section -->
     <main id="main-content">
     <section class="hero" id="hero">
-        <video class="hero-video" autoplay muted loop playsinline poster="hero-bg-poster.jpg" aria-label="AI solutions background animation">
-            <source src="hero-bg.mp4" type="video/mp4">
-        </video>
-        <canvas id="hero-canvas" style="display:none"></canvas>
-        <div class="floating-shapes" id="floatingShapes">
-            <div class="shape shape-1"></div>
-            <div class="shape shape-2"></div>
-            <div class="shape shape-3"></div>
-        </div>
         <div class="hero-content">
             <div class="hero-badge">
                 <span class="pulse"></span>
