Zoom out hero image - use 100% width instead of cover

--- a/index.html
+++ b/index.html
@@ -588,14 +588,16 @@
 
         /* Hero Section */
         .hero {
-            min-height: 85vh;
+            min-height: 70vh;
             padding: 0;
             position: relative;
             display: flex;
             align-items: flex-end;
             justify-content: flex-start;
             overflow: hidden;
-            background: url('newport-bridge.png') center top / cover no-repeat;
+            background: 
+                url('newport-bridge.png') center top / 100% auto no-repeat,
+                linear-gradient(to bottom, #1a3a5c 0%, var(--bg-dark) 100%);
         }
 
         /* Gradient overlay for text readability */
