--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 
         /* Hero Section */
         .hero {
-            min-height: 70vh;
+            min-height: 50vh;
             padding: 0;
             position: relative;
             display: flex;
@@ -596,8 +596,8 @@
             justify-content: flex-start;
             overflow: hidden;
             background: 
-                url('newport-bridge.png') center top / 100% auto no-repeat,
-                linear-gradient(to bottom, #1a3a5c 0%, var(--bg-dark) 100%);
+                url('newport-bridge.png') center top / contain no-repeat,
+                linear-gradient(to bottom, #0d1a2d 0%, var(--bg-dark) 100%);
         }
 
         /* Gradient overlay for text readability */
